Implement finding display drivers

--- a/Drink/Drink.vcxproj.filters
+++ b/Drink/Drink.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="QRPatch">
       <UniqueIdentifier>{95948e8b-44da-4222-9832-65fc43814f2e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DxUtil">
+      <UniqueIdentifier>{3e26ea4e-8419-48b0-9ed3-6eeec48c24ba}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
@@ -51,6 +54,9 @@
     <ClCompile Include="QRPatch.c">
       <Filter>QRPatch</Filter>
     </ClCompile>
+    <ClCompile Include="DxUtil.c">
+      <Filter>DxUtil</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VgaDump.h">
@@ -73,6 +79,9 @@
     </ClInclude>
     <ClInclude Include="QRPatch.h">
       <Filter>QRPatch</Filter>
+    </ClInclude>
+    <ClInclude Include="DxUtil.h">
+      <Filter>DxUtil</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
