--- a/Drink/Drink.vcxproj
+++ b/Drink/Drink.vcxproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <ClCompile Include="Carpenter.c" />
     <ClCompile Include="Driver.c" />
+    <ClCompile Include="DxUtil.c" />
     <ClCompile Include="ImageParse.c" />
     <ClCompile Include="Match.c" />
     <ClCompile Include="MessageTable.c" />
@@ -115,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Carpenter.h" />
+    <ClInclude Include="DxUtil.h" />
     <ClInclude Include="ImageParse.h" />
     <ClInclude Include="Match.h" />
     <ClInclude Include="MessageTable.h" />
