Implement hooking of graphics functions

--- a/Drink/Drink.vcxproj.filters
+++ b/Drink/Drink.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="DxUtil">
       <UniqueIdentifier>{3e26ea4e-8419-48b0-9ed3-6eeec48c24ba}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DxDump">
+      <UniqueIdentifier>{e28135c2-fe63-4a6a-b90b-9e4d4c73145f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
@@ -57,6 +60,9 @@
     <ClCompile Include="DxUtil.c">
       <Filter>DxUtil</Filter>
     </ClCompile>
+    <ClCompile Include="DxDump.c">
+      <Filter>DxDump</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VgaDump.h">
@@ -82,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="DxUtil.h">
       <Filter>DxUtil</Filter>
+    </ClInclude>
+    <ClInclude Include="DxDump.h">
+      <Filter>DxDump</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
